Systemy_operacyjne_mikrokontrolerow/.metadata/.plugins/org.eclipse.cdt.ui/Lab04.build.log
08:53:43 **** Incremental Build of configuration Debug for project Lab04 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c: In function 'StartTask01':
../Core/Src/main.c:344:3: error: unknown type name 'ADC_HandleTypeDef'; did you mean 'UART_HandleTypeDef'?
  344 |   ADC_HandleTypeDef hadc1;
      |   ^~~~~~~~~~~~~~~~~
      |   UART_HandleTypeDef
../Core/Src/main.c:353:15: warning: implicit declaration of function 'HAL_ADC_Start'; did you mean 'HAL_DMA_Start'? [-Wimplicit-function-declaration]
  353 |               HAL_ADC_Start(&hadc1);
      |               ^~~~~~~~~~~~~
      |               HAL_DMA_Start
../Core/Src/main.c:354:19: warning: implicit declaration of function 'HAL_ADC_PollForConversion' [-Wimplicit-function-declaration]
  354 |               if (HAL_ADC_PollForConversion(&hadc1, 10) == HAL_OK)
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:356:29: warning: implicit declaration of function 'HAL_ADC_GetValue' [-Wimplicit-function-declaration]
  356 |                 adc_value = HAL_ADC_GetValue(&hadc1);
      |                             ^~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'StartTask02':
../Core/Src/main.c:401:13: warning: implicit declaration of function 'snprintf' [-Wimplicit-function-declaration]
  401 |             snprintf(msg, sizeof(msg), "Average temperature: %.2f C\r\n", average);
      |             ^~~~~~~~
../Core/Src/main.c:22:1: note: include '<stdio.h>' or provide a declaration of 'snprintf'
   21 | #include "cmsis_os.h"
  +++ |+#include <stdio.h>
   22 | 
../Core/Src/main.c:401:13: warning: incompatible implicit declaration of built-in function 'snprintf' [-Wbuiltin-declaration-mismatch]
  401 |             snprintf(msg, sizeof(msg), "Average temperature: %.2f C\r\n", average);
      |             ^~~~~~~~
../Core/Src/main.c:401:13: note: include '<stdio.h>' or provide a declaration of 'snprintf'
../Core/Src/main.c:402:55: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  402 |             HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg), HAL_MAX_DELAY);
      |                                                       ^~~~~~
../Core/Src/main.c:22:1: note: include '<string.h>' or provide a declaration of 'strlen'
   21 | #include "cmsis_os.h"
  +++ |+#include <string.h>
   22 | 
../Core/Src/main.c:402:55: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
  402 |             HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg), HAL_MAX_DELAY);
      |                                                       ^~~~~~
../Core/Src/main.c:402:55: note: include '<string.h>' or provide a declaration of 'strlen'
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

08:53:44 Build Failed. 3 errors, 7 warnings. (took 868ms)

